View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028326 | Community | OCCT:Modeling Algorithms | public | 2016-12-29 20:29 | 2017-09-29 16:24 |
Reporter | Istvan Csanady | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028326: Checking invariant shapes in revolve is incomplete | ||||
Description | BRepBuilderAPI_Revolve only checks line type curves for invariance. This leads to failed revolve operations, when the revolved body has a linear spline or bezier curve that is coincident with the axis of revolution. Fix is attached. | ||||
Steps To Reproduce | polyline w 0 0 0 10 0 0 10 5 0 0 0 0 nurbsconvert wn w revol rn wn 0 0 0 1 0 0 90 An exception was caught 000001A7F3AAC640 : Standard_ConstructionError: Adaptor3d_SurfaceOfRevolution : Axe and meridian are confused | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_6 bug28326 | ||||
|
revolve_invariant.diff (2,180 bytes) |
|
Branch CR28326 has been created by msv. SHA-1: 41942928e3fc5894cde6e10deb89d7c7181f8fba Detailed log of new commits: Author: msv Date: Wed Feb 1 12:26:24 2017 +0300 0028326: Checking invariant shapes in revolve is incomplete Check for bspline and bezier curves coinciding with the axis of rotation. |
|
The test for 28003 has been created in the branch. It uses the shape from the bug 28003. |
|
Please test. |
|
Dear BugMaster, During building of branch CR28326 (SHA-1: 41942928e3fc5894cde6e10deb89d7c7181f8fba) from occt git-repository (and master from products git-repository) compilation errors have been detected. On Windows: http://jenkins-test-05.nnov.opencascade.com/view/CR28326-master/job/CR28326-master-OCCT-Windows-64-VC10-opt-compile/1/parsed_console/ |
|
Dear Mikhail, Branch CR28326 has been rejected due to: - compilation errors |
|
Branch CR28326_1 has been created by msv. SHA-1: 84037a24c4692de18d8429878b1442a64bc916b9 Detailed log of new commits: Author: msv Date: Wed Feb 1 12:26:24 2017 +0300 0028326: Checking invariant shapes in revolve is incomplete Check for bspline and bezier curves coinciding with the axis of rotation. |
|
Error corrected. |
|
Branch CR28326_1 has been updated by apv. SHA-1: d1a6071d252a39c1de507d6554929ffdc9dd4fea Detailed log of new commits: Author: apv Date: Tue Feb 7 11:56:13 2017 +0300 Minor correction of test case bugs/modalg_6/bug28003 |
|
Dear BugMaster, Branch CR28326_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 84037a24c4692de18d8429878b1442a64bc916b9 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 64 Windows: 0 MacOS: 1200 Regressions/Differences: Not detected Testing cases: bugs modalg_6 bug28326 - OK http://occt-tests/CR28326_1-master-OCCT/Debian70-64/bugs/modalg_6/bug28326.html http://occt-tests/CR28326_1-master-OCCT/Windows-64-VC10/bugs/modalg_6/bug28326.html Testing on Linux: Total MEMORY difference: 91389383 / 91287887 [+0.11%] Total CPU difference: 19574.51000000029 / 19662.570000000327 [-0.45%] Testing on Windows: Total MEMORY difference: 57126105 / 57124391 [+0.00%] Total CPU difference: 18358.884084398705 / 18512.045866198645 [-0.83%] |
|
Branch CR28326_1 has been deleted by inv. SHA-1: d1a6071d252a39c1de507d6554929ffdc9dd4fea |
|
Branch CR28326 has been deleted by inv. SHA-1: 41942928e3fc5894cde6e10deb89d7c7181f8fba |
occt: master d76b39ab 2017-02-09 12:33:48 Committer: apn Details Diff |
0028326: Checking invariant shapes in revolve is incomplete Check for bspline and bezier curves coinciding with the axis of rotation. Minor correction of test case bugs/modalg_6/bug28003 |
Affected Issues 0028326 |
|
mod - src/BRepSweep/BRepSweep_Rotation.cxx | Diff File | ||
add - tests/bugs/modalg_6/bug28003 | Diff File | ||
add - tests/bugs/modalg_6/bug28326 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-12-29 20:29 | Istvan Csanady | New Issue | |
2016-12-29 20:29 | Istvan Csanady | Assigned To | => msv |
2016-12-29 20:29 | Istvan Csanady | File Added: revolve_invariant.diff | |
2017-02-01 12:31 | msv | Status | new => assigned |
2017-02-01 12:32 | msv | Steps to Reproduce Updated | |
2017-02-01 12:59 | Timo | Relationship added | related to 0028003 |
2017-02-01 16:55 | git | Note Added: 0063306 | |
2017-02-01 16:56 | msv | Note Added: 0063307 | |
2017-02-01 16:57 | msv | Status | assigned => resolved |
2017-02-01 16:57 | msv | Note Added: 0063308 | |
2017-02-01 16:57 | msv | Assigned To | msv => bugmaster |
2017-02-01 16:57 | msv | Status | resolved => reviewed |
2017-02-01 17:23 |
|
Assigned To | bugmaster => apv |
2017-02-01 18:15 |
|
Test case number | => bugs modalg_6 bug28326 |
2017-02-03 13:07 |
|
Note Added: 0063387 | |
2017-02-03 13:07 |
|
Assigned To | apv => msv |
2017-02-03 13:07 |
|
Status | reviewed => assigned |
2017-02-03 13:08 |
|
Note Added: 0063388 | |
2017-02-03 19:52 | git | Note Added: 0063426 | |
2017-02-03 19:53 | msv | Status | assigned => resolved |
2017-02-03 19:53 | msv | Note Added: 0063427 | |
2017-02-03 19:53 | msv | Assigned To | msv => apv |
2017-02-03 19:53 | msv | Status | resolved => reviewed |
2017-02-07 11:56 | git | Note Added: 0063475 | |
2017-02-07 12:00 |
|
Note Added: 0063476 | |
2017-02-07 12:00 |
|
Assigned To | apv => bugmaster |
2017-02-07 12:00 |
|
Status | reviewed => tested |
2017-02-10 14:33 | apn | Changeset attached | => occt master d76b39ab |
2017-02-10 14:33 | apn | Assigned To | bugmaster => apn |
2017-02-10 14:33 | apn | Status | tested => verified |
2017-02-10 14:33 | apn | Resolution | open => fixed |
2017-03-20 14:35 | git | Note Added: 0064497 | |
2017-03-20 14:36 | git | Note Added: 0064511 | |
2017-09-29 16:20 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:24 |
|
Status | verified => closed |