0028326: Checking invariant shapes in revolve is incomplete

Check for bspline and bezier curves coinciding with the axis of rotation.
Minor correction of test case bugs/modalg_6/bug28003